--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,23 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div class="modal" id="projectIdModal" tabindex="-1" role="dialog" aria-hidden="true" style="display:block;">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Enter Project ID</h5>
+          </div>
+          <div class="modal-body">
+            <input type="text" id="projectIdInput" class="form-control" placeholder="Enter Project ID" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="submitProjectId" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="mainContent" style="display: none;" class="page">
+      <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body">
         <div class="cssload-container">
@@ -22,7 +38,6 @@
         <p>Loading...</p>
       </div>
     </div>
-    <div class="page">
       <!-- Page Header-->
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -35,7 +50,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="images/logo-default1-140x57.png" alt="" width="140" height="57" srcset="images/logo-default-280x113.png 2x"/></a></div>
+                  <div class="rd-navbar-brand"><a href="index.html"><img class="dynamicLogo" src="images/logo-default1-140x57.png" alt="" width="140" height="57" /></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -79,7 +94,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-triangle"><span class="icon-xl linearicons-phone-incoming"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="tel:#">1-800-123-1234</a></h4>
+                  <h4><a href="tel:#" class="link-phone">1-800-123-1234</a></h4>
                   <p>You can call us anytime</p>
                 </div>
               </div>
@@ -88,7 +103,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-circle"><span class="icon-xl linearicons-map2"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="#">51 Francis Street, San Diego, CA 91702 United States</a></h4>
+                  <h4><a href="#" class="link-location">51 Francis Street, San Diego, CA 91702 United States</a></h4>
                 </div>
               </div>
             </div>
@@ -96,7 +111,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-rectangle"><span class="icon-xl linearicons-paper-plane"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="mailto:#">info@demolink.org</a></h4>
+                  <h4><a href="mailto:#" class="link-aemail">info@demolink.org</a></h4>
                   <p>Feel free to email us your questions</p>
                 </div>
               </div>
@@ -155,7 +170,7 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-60">
-              <div class="col-12"><a href="index.html"><img src="images/logo-default1-140x57.png" alt="" width="140" height="57" srcset="images/logo-default-280x113.png 2x"/></a></div>
+              <div class="col-12"><a href="index.html"><img class="dynamicLogo" src="images/logo-default1-140x57.png" alt="" width="140" height="57" /></a></div>
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="#">Menu</a></li>
