--- a/typography.html
+++ b/typography.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div class="modal" id="projectIdModal" tabindex="-1" role="dialog" aria-hidden="true" style="display:block;">
+    <div class="modal" id="projectIdModal" tabindex="-1" role="dialog"  style="display:block;">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
