Completed all banners

--- a/typography.html
+++ b/typography.html
@@ -75,7 +75,7 @@
           </nav>
         </div>
       </header>
-      <section class="parallax-container overlay-1" data-parallax-img="images/breadcrumbs.jpg">
+      <section class="parallax-container overlay-1 breadcrumbs-03" >
         <div class="parallax-content breadcrumbs-custom context-dark"> 
           <div class="container">
             <div class="row justify-content-center">
