--- a/contacts.html
+++ b/contacts.html
@@ -72,7 +72,7 @@
           </nav>
         </div>
       </header>
-      <section class="parallax-container overlay-1" data-parallax-img="images/breadcrumbs.jpg">
+      <section class="parallax-container overlay-1 breadcrumbs-02">
         <div class="parallax-content breadcrumbs-custom context-dark"> 
           <div class="container">
             <div class="row justify-content-center">
